# obs-studio

./: .gitmodules  CMakeLists.txt  buildspec.json
.github/workflows/: main.yml  push.yaml
CI/: full-build-macos.sh  install-dependencies-osx.sh
UI/: CMakeLists.txt  auth-youtube.cpp  auth-youtube.hpp  hotkey-edit.cpp  hotkey-edit.hpp  item-widget-helpers.cpp  item-widget-helpers.hpp  obs-app.cpp  obs-app.hpp  qt-wrappers.cpp  record-button.cpp  scene-tree.cpp  scene-tree.hpp  source-tree-widget.cpp  source-tree-widget.hpp  source-tree.cpp  source-tree.hpp  visibility-item-widget.cpp  visibility-item-widget.hpp  volume-control.cpp  volume-control.hpp  win-dll-blocklist.c  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-preview.cpp  window-basic-preview.hpp  window-basic-settings-a11y.cpp  window-basic-settings-stream.cpp  window-basic-settings.cpp  window-basic-settings.hpp  window-basic-source-select.cpp  window-basic-source-select.hpp  window-basic-transform.cpp  window-dock-browser.hpp  window-dock-youtube-app.cpp  window-dock-youtube-app.hpp  window-dock.hpp  window-namedialog.cpp  window-namedialog.hpp
UI/forms/: OBSBasic.ui  OBSBasicSettings.ui  OBSBasicSourceSelect.ui  OBSBasicTransform.ui
cmake/Modules/: CopyMSVCBins.cmake
cmake/common/: osconfig.cmake
cmake/finders/: FindVPL.cmake
libobs/: CMakeLists.txt  obs-win-crash-handler.c  obs-windows.c
libobs-d3d11/: CMakeLists.txt  d3d11-config.h.in  d3d11-duplicator.cpp  d3d11-subsystem.hpp
libobs-winrt/: winrt-capture.h
plugins/: CMakeLists.txt
(+130 files in other folders)
